tailor.css
@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');

body {
  margin: 0;
  padding: 0;
  font-family: arial, sans-serif;
}
main {
  margin: auto;
  padding: 0;
  box-sizing: border-box;
  /*width: auto;*/
  width: 15em;
}

.shirt_box {
  padding: 0;
  border-left: 3px solid rgb(111,222,222);
  border-right: 3px solid rgb(111,222,222);
  border-top: 3px solid rgb(111,222,222);
  width: 15em;
  position: relative;
}

img {
  display: block;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  width: 15em;
}

a {
  box-sizing: border-box;
  color: rgb(111,222,222);
  text-decoration: none;
  padding: 1em;
  margin: 0;
  float: left;
  width: 3em;
  height: 3em;
  background-color: rgb(255,255,255)
}

.shirt_info::after {
  content: '';
  display: block;
  clear: both;
}

.shirt_info {
  padding: 0;
  position: relative;
  border: 3px solid rgb(111,222,222);
  float: left;
  display: block;
  width: 15em;
  z-index: 5;
}

.style_price {
  box-sizing: border-box;
  display: block;
  width: 15em;
  margin: 0;
  padding: 0em;
  clear: both;
}
.price {
  font-weight: bold;
  float: right;
  text-align: right;
  color: rgb(111,222,222);
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;

}

.styleName {
  float: left;
  margin: 0;
  text-align: left;
  color: rgb(111,222,222);
  padding-top: 1em;
  padding-bottom: 1em;
  clear: both;
}

.size_menu:nth-child(2) {
  opacity: 0;
  width: 3em;
  position: absolute;
  top: -205px;
  left: 96px;
  transition: opacity 0.5s linear;
  border: 3px solid rgb(111,222,222);
  z-index: 4;
}

.color_menu:nth-child(2)  {
  opacity: 0;
  width: 6em;
  position: absolute;
  top: -109px;
  left: 145px;
  transition: opacity 0.5s linear;
  border: 3px solid rgb(111,222,222);
  z-index: 4;
}
.size_hover:hover > .size_menu {
  opacity: 1;
}
.color_hover:hover > .color_menu{
  opacity: 1;
}

a:hover {
  background-color: rgb(111,222,222);
  color: white;
}

.fa-repeat {
  padding: 0.25em;
  font-size: 1em;
  left: 216px;
  position: absolute;
  text-align: right;
  width: 1.5em;
  height: 1.5em;
  border-left: 3px solid rgb(111,222,222);
  border-bottom: 3px solid rgb(111,222,222);
  z-index: 3;

}
.shirt_front {
  padding: 1em;
  z-index: 2;
  position: absolute;
  top: 0;
}
.shirt_back {
  padding: 1em;
  z-index: 1;
}

.shirt_front:hover {
  opacity: 0;
}




.triangle-isosceles:after {
    content: "";
    position: absolute;
    bottom: -15px;
    left: 8px;
    border-width: 15px 15px 0;
    border-style: solid;
    border-color: rgb(111,222,222) transparent;
    display: block;
    width: 0;
}

.cl_a  {
  color: pink;
}

.cl_a:hover {
  background-color: rgb(111,222,222);
  color: pink;
}

.cl_b {
  color: orange;
}
.cl_b:hover {
  background-color: rgb(111,222,222);
  color: orange;
}

.cl_c {
  color: yellow;
}
.cl_c:hover {
  background-color: rgb(111,222,222);
  color: yellow;
}
.cl_d {
  color: blue;
}
.cl_d:hover {
  background-color: rgb(111,222,222);
  color: blue;

}

